@@ -1,13 +1,17 @@
-/*******************************************************************************
- * Copyright (c) 2015 IBM Corporation and others.
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
- * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
+/*****************************************************************************
+ *  Limpet - the Lightweight InforMation ProcEssing Toolkit
+ *  http://limpet.info
  *
- * Contributors:
- *     IBM Corporation - initial API and implementation
- *******************************************************************************/
+ *  (C) 2015-2016, Deep Blue C Technologies Ltd
+ *
+ *  This library is free software; you can redistribute it and/or
+ *  modify it under the terms of the Eclipse Public License v1.0
+ *  (http://www.eclipse.org/legal/epl-v10.html)
+ *
+ *  This library is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+ *****************************************************************************/
 package info.limpet.data.persistence.xml;
 
 import java.text.ParseException;
@@ -37,12 +41,17 @@ public class TimesCollectionConverter extends CollectionConverter
 	private static final String XML_TIME_FORMAT = "yyyy-MM-dd'T'HH:mm:ss";
 	private static final String TIME_NODE = "time";
 	private static final String INFO_LIMPET_PLUGIN_ID = "info.limpet";
-	private static SimpleDateFormat _XMLDateFormat;
+	private static final SimpleDateFormat XML_DATE_FORMAT;
 
-	static
+	private static SimpleDateFormat getXmldateformat()
+  {
+    return XML_DATE_FORMAT;
+  }
+
+  static
 	{
-		_XMLDateFormat = new SimpleDateFormat(XML_TIME_FORMAT);
-		_XMLDateFormat.setTimeZone(TimeZone.getTimeZone("GMT"));
+		XML_DATE_FORMAT = new SimpleDateFormat(XML_TIME_FORMAT);
+		XML_DATE_FORMAT.setTimeZone(TimeZone.getTimeZone("GMT"));
 	}
 
 	public TimesCollectionConverter(Mapper mapper)
@@ -65,7 +74,7 @@ public class TimesCollectionConverter extends CollectionConverter
 		TimesList<Long> times = (TimesList<Long>) source;
 		for (Long time : times)
 		{
-			String value = _XMLDateFormat.format(new Date(time));
+			String value = getXmldateformat().format(new Date(time));
 			writer.startNode(TIME_NODE);
 			context.convertAnother(value);
 			writer.endNode();
@@ -84,13 +93,13 @@ public class TimesCollectionConverter extends CollectionConverter
 			Long value;
 			try
 			{
-				value = _XMLDateFormat.parse(item).getTime();
+				value = getXmldateformat().parse(item).getTime();
 			}
 			catch (ParseException e)
 			{
 				try
 				{
-					value = new Long(item);
+					value = Long.valueOf(item);
 				}
 				catch (NumberFormatException e1)
 				{
